Changes for 1.8.1

 - [ZBX-1716] fixed server behaviour (not dying silently) when mysql database user, password or privileges change (Dmitry)
 - [ZBX-1800] updated Japanese translation; thanks to Kodai (Richlv)
 - [ZBX-1798] updated Russian translation; thanks to dotneft (Richlv)
 - [ZBX-1783] fixed problem with fixed Y axis in graphs (Aly)
 - [ZBX-1654] fixed disabled trigger map icon (Aly)
 - [ZBX-1653] fixed link from maps to events (Aly)
 - [ZBX-1164] improved error messaging in regexp form (Aly)
 - [ZBX-1774] fixed error in slide screen in case if no screens defined (Aly)
 - [ZBX-1758] improved node filtering in sqls (Aly)
 - [ZBX-1776] fixed js error for ie6 in triggers status screen (Aly)
 - [ZBX-1752] fixed error showing maps when REGISTER_GLOBALS in PHP is on (Vedmak)
 - [ZBX-954] fixed typos in changelog, error messages and frontend item hints (Richlv)
 - [ZBX-1725] fixed graphitem sortorder (Aly)
 - [ZBX-1635] fixed possible Windows agent crash when using checks based on performance counters (Sasha)
 - [ZBX-1759] fixed bug when bulk acknowledge, acknowledges already acknowledged events (Vedmak)
 - [ZBX-1596] fixed checking of allowed hosts for data sent by zabbix_sender (Dmitry)
 - [ZBX-1572] fixed processing of the performance counters defined in the configuration file using non-latin symbols (Dmitry)
 - [ZBX-1264] added support of simplified syntax for external checks (Alexei)
 - [ZBX-1483] fixed icmppingsec to return seconds as in 1.6.x (Alexei)
 - [ZBX-862] added support of kernel.maxproc[] under Linux 2.6 (Sasha)
 - [ZBX-1714] added confirmation dialogue for proxy operations (Vedmak)
 - [ZBX-1717] fixed configuration -> ITservices display bugs when nodeid is greater than 99 (Vedmak)
 - [ZBX-1712] removed empty translation strings (Richlv)
 - [ZBXNEXT-194] added host status widget to dashboard (Vedmak)
 - [ZBX-1670] fixed events from slave nodes not shown when all nodes are selected (Vedmak)
 - [ZBX-1668] fixed saving graphs with web items (Aly)